# otuscpp_14_yamr

./: .travis.yml  CMakeLists.txt  emails.txt  emails_1.txt  emails_2.txt  file.txt  main.cpp  numbers.txt  readme.md  shebdim_test.txt
concurrent/: queue.cpp  queue.h
file_ops/: file_saver.cpp  file_saver.h  file_splitter.cpp  file_splitter.h
file_splitter/: file_splitter.cpp  file_splitter.h
include/: data_types.h
mapper/: imapper_alg.cpp  imapper_alg.h  mapper.cpp  mapper.h
mapper/alg/: min_prefix_len.cpp  min_prefix_len.h
reducer/: ireducer_alg.cpp  ireducer_alg.h  reducer.cpp  reducer.h
reducer/alg/: min_prefix_len.cpp  min_prefix_len.h
shuffler/: ishuffler.h  shuffler.cpp  shuffler.h
